Changes made after completing Reading Data section

--- a/Streams and Data.csproj
+++ b/Streams and Data.csproj
@@ -10,6 +10,9 @@
     <Content Include="data.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>  
+    <Content Include="SoccerGameResults.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
   </ItemGroup>
 
 </Project>
