Changes made mid-way through deserializing

--- a/Streams and Data.csproj
+++ b/Streams and Data.csproj
@@ -12,7 +12,14 @@
     </Content>  
     <Content Include="SoccerGameResults.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="players.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>  
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
